--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4674,7 +4674,7 @@ small {
 
 .card-panel {
   transition: box-shadow .25s;
-  padding: 24px;
+  padding: 5px 24px 5px 24px;
   margin: 0.5rem 0 1rem 0;
   border-radius: 2px;
   background-color: #fff;
